--- a/package.json
+++ b/package.json
@@ -9,33 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.53.1",
-    "axios": "^1.7.7",
-    "js-cookie": "^3.0.5",
-    "next": "14.2.7",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-query": "^3.39.3",
-    "react-redux": "^9.1.2",
-    "react-simple-maps": "^3.0.0",
-    "recharts": "^2.12.7",
-    "styled-components": "^6.1.13"
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.8",
+    "next": "14.2.8",
+    "postcss": "8.4.45",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
-    "jest": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "daisyui": "^4.12.10",
+    "jest": "^29.7.0"
   }
 }
